--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1"
   },
   "name": "server",
@@ -13,7 +14,8 @@
   "description": "social media backend",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "npm i"
   },
   "author": "Rohit",
   "license": "ISC"
